=========================================================================
CHANGE LOG
=========================================================================

2007-08-28  Warren L. DeLano <warren@delsci.com

	* added support for smooth camera interpolation within movies
	  (using scenes, views, animate options, etc.) 
	
2007-08-26  Warren L. DeLano <warren@delsci.com

	* added store_defaults & related options to reinitialize command
	
2007-08-25  Warren L. DeLano <warren@delsci.com

	* implemented auto_rename_duplicate_objects setting
		
2007-08-24  Warren L. DeLano <warren@delsci.com

	* added ellipsoid_quality and cgo_ellipsoid_quality settings
	
	* added CGO ellipsoids
	
2007-08-15  Warren L. DeLano <warren@delsci.com

	* implemented some fixes to deal with new PDB nomenclature
	
	* now guessing approximate valences for PDB hetatm ligands in
	  order to improve hydrogen-bond display (setting:
	  pdb_hetatm_guess_valences) -- the guesses are often
	  wrong but are much better than nothing!
	
	* added sys.stdout.writelines emulation	
	
2007-08-14  Warren L. DeLano <warren@delsci.com>

	* sys.argv if not definied, now set using __main__.pymol_argv
	
	* added util.cnc keyword (formerly just an api function)
	
2007-08-02  Warren L. DeLano <warren@delsci.com>

	* incorporated Michael Lerner's suggestion for argument handling
	    pymol -c script.py --do=something --when=now
	    sys.argv = [ 'script.py', '--do=something' , '--when=now' ]
	
2007-07-30  Warren L. DeLano <warren@delsci.com>

	* fixed memory leak with gradients
	
2007-07-25  Warren L. DeLano <warren@delsci.com>

	* fixed bug with command-line rendering with groups 
			
	* worked-around problem with .MOE triple-bond valence info

	* fixed bug in .MOE reader with duplicate graphics object names

2007-07-23  Warren L. DeLano <warren@delsci.com>

	* fixed bug (mostly) harmless bug unpacking colors from sessions
	
	* fixed problems with box selecting when using non-default stereo
	parameters
	