@@ -3562,6 +3562,7 @@ void SettingInitGlobal(PyMOLGlobals *G,int alloc,int reset_gui,int use_default)
     set_b(I,cSetting_pdb_hetatm_guess_valences,1);
     set_i(I,cSetting_ellipsoid_quality, 1);
     set_i(I,cSetting_cgo_ellipsoid_quality, -1);
+    set_b(I,cSetting_movie_animate_by_frame,0);
   }
 
 }
